Fix modal z-index issue

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -2737,7 +2737,8 @@ html {
   }
 }
 
-#modal {
+#modal,
+#portal-root {
   position: relative;
   z-index: 999999;
 }
